--- a/client/package.json
+++ b/client/package.json
@@ -13,11 +13,11 @@
     "@ant-design/icons": "^6.1.0",
     "antd": "^6.2.2",
     "dayjs": "^1.11.19",
-    "dexie": "^4.3.0",
-    "dexie-react-hooks": "^4.2.0",
+    "firebase": "^12.8.0",
     "lucide-react": "^0.563.0",
     "react": "^19.2.0",
-    "react-dom": "^19.2.0"
+    "react-dom": "^19.2.0",
+    "react-firebase-hooks": "^5.1.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
